[gd_scene load_steps=8 format=2]

[ext_resource path="res://Graphics/bot1/robotics.png" type="Texture" id=1]
[ext_resource path="res://scripts/Robot1.gd" type="Script" id=2]
[ext_resource path="res://silouette.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/modulate = null

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 120 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 48 )

[node name="Robot1" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Node2D" parent="."]
position = Vector2( 0, 32 )

[node name="RoboticsShadow" type="Sprite" parent="Shadow"]
material = SubResource( 4 )
position = Vector2( -32, -1.47977e-06 )
rotation = -1.5708
scale = Vector2( 0.0700834, 0.0680556 )
texture = ExtResource( 1 )

[node name="Robotics" type="Sprite" parent="."]
scale = Vector2( 0.0700834, 0.0680556 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HackingTimer" type="Timer" parent="."]

[node name="PlayerAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttack"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="HackingTimer" to="." method="hackingTimerTimeout"]
[connection signal="body_entered" from="PlayerAttack" to="." method="walkInPlayerAttack"]
[connection signal="body_exited" from="PlayerAttack" to="." method="walkOutPlayerAttack"]
